2009-02-15  Israel G. Lugo <israel.lugo@lugosys.com>

	* imagecmp.py: New module, main program. Does nothing but parse the
	command-line for now.


2009-02-15  Israel G. Lugo <israel.lugo@lugosys.com>

	* walk.py: New module. Implements our wrapper for os.walk.


2009-02-11  Israel G. Lugo <israel.lugo@lugosys.com>

	* ChangeLog: Add svn:eol-style property, set to native.


2009-02-09  Israel G. Lugo <israel.lugo@lugosys.com>

	* compare.py, imagearray.py: Add svn:eol-style property to native.
	Set svn:keywords property to "Author Date Id Revision". Add $Id$
	comment to the source code.


2009-02-09  Israel G. Lugo <israel.lugo@lugosys.com>

	* ChangeLog: Fix filenames that erroneously contained a "src/" prefix.


2009-02-09  Israel G. Lugo <israel.lugo@lugosys.com>

	* README: New file, for now only lists dependencies.


2009-02-09  Israel G. Lugo <israel.lugo@lugosys.com>

	* compare.py: Add svn:executable property, forgot in last commit.


2009-02-09  Israel G. Lugo <israel.lugo@lugosys.com>

	Add simple command-line interface for testing uses.
	* compare.py: Add shebang. Implement command-line interface that
	reads filename arguments from argv and prints the result to stdout.


2009-02-09  Israel G. Lugo <israel.lugo@lugosys.com>

	Initial import into version control.


 Copyright 2009 Israel G. Lugo.

 This is free software; see the source for copying conditions. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.